--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!--header section starts here-->
-    <header>
+    <header class="header">
 
         <a href="#" class="logo"><i class="fas fa-hikin"></i> travel. </a>
 
@@ -312,6 +312,381 @@
 
     <!--shop section ends here-->
 
+    <!--packages section starts here-->
+    <section class="packages" id="packages">
+
+        <h1 class="heading">popular packages</h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/img-1.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>featured tour package</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, eos.</p>
+                    <div class="price">$250 - $450</div>
+                    <a href="#" class="btn">explore now</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/img-2.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>featured tour package</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, eos.</p>
+                    <div class="price">$250 - $450</div>
+                    <a href="#" class="btn">explore now</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/img-3.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>featured tour package</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, eos.</p>
+                    <div class="price">$250 - $450</div>
+                    <a href="#" class="btn">explore now</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/img-4.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>featured tour package</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, eos.</p>
+                    <div class="price">$250 - $450</div>
+                    <a href="#" class="btn">explore now</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/img-5.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>featured tour package</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, eos.</p>
+                    <div class="price">$250 - $450</div>
+                    <a href="#" class="btn">explore now</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/img-6.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>featured tour package</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, eos.</p>
+                    <div class="price">$250 - $450</div>
+                    <a href="#" class="btn">explore now</a>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!--packages section ends here-->
+
+
+    <!--reviewss section start here-->
+
+    <section class="reviews" id="reviews">
+        <h1 class="heading">client's reviews</h1>
+
+        <div class="swiper review-slider">
+
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide slide">
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident cumque molestias, fugiat obcaecati ea deserunt, incidunt amet, illo commodi ex laborum modi assumenda totam maiores doloribus nisi laudantium atque neque?</p>
+                    <div class="user">
+                        <img src="images/pic-1.png" alt="">
+                        <div class="info">
+                            <h3>john doe</h3>
+                            <span>designer</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident cumque molestias, fugiat obcaecati ea deserunt, incidunt amet, illo commodi ex laborum modi assumenda totam maiores doloribus nisi laudantium atque neque?</p>
+                    <div class="user">
+                        <img src="images/pic-2.png" alt="">
+                        <div class="info">
+                            <h3>laura ann</h3>
+                            <span>analyst</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident cumque molestias, fugiat obcaecati ea deserunt, incidunt amet, illo commodi ex laborum modi assumenda totam maiores doloribus nisi laudantium atque neque?</p>
+                    <div class="user">
+                        <img src="images/pic-3.png" alt="">
+                        <div class="info">
+                            <h3>john doe</h3>
+                            <span>marketer</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident cumque molestias, fugiat obcaecati ea deserunt, incidunt amet, illo commodi ex laborum modi assumenda totam maiores doloribus nisi laudantium atque neque?</p>
+                    <div class="user">
+                        <img src="images/pic-1.png" alt="">
+                        <div class="info">
+                            <h3>john doe</h3>
+                            <span>plumber</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident cumque molestias, fugiat obcaecati ea deserunt, incidunt amet, illo commodi ex laborum modi assumenda totam maiores doloribus nisi laudantium atque neque?</p>
+                    <div class="user">
+                        <img src="images/pic-1.png" alt="">
+                        <div class="info">
+                            <h3>john doe</h3>
+                            <span>doctor</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident cumque molestias, fugiat obcaecati ea deserunt, incidunt amet, illo commodi ex laborum modi assumenda totam maiores doloribus nisi laudantium atque neque?</p>
+                    <div class="user">
+                        <img src="images/pic-1.png" alt="">
+                        <div class="info">
+                            <h3>john doe</h3>
+                            <span>nurse</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--reviews section ends here-->
+
+
+
+    <!--servicess section starts here-->
+    <section class="services">
+
+        <h1 class="heading">what we offer</h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <img src="images/serv-1.png" alt="">
+                <h1>complete guide</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quas!</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+
+            <div class="box">
+                <img src="images/serv-2.png" alt="">
+                <h1>custom packages</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quas!</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+
+            <div class="box">
+                <img src="images/serv-3.png" alt="">
+                <h1>family trips</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quas!</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+
+            <div class="box">
+                <img src="images/serv-4.png" alt="">
+                <h1>train guides</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quas!</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+
+            <div class="box">
+                <img src="images/serv-5.png" alt="">
+                <h1>adventure trail</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quas!</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+
+            <div class="box">
+                <img src="images/serv-6.png" alt="">
+                <h1>various adventures</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quas!</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+        </div>
+    </section>
+
+    <!--services section ends here-->
+
+
+    <!--blogs section starts here-->
+
+    <section class="blogs" id="blogs">
+
+        <h1 class="heading"> our daily posts </h1>
+
+        <div class="swiper blogs-slider">
+
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide slide">
+                    <img src="images/img-1.jpg" alt="">
+                    <div class="icons">
+                        <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2021 </a>
+                        <a href="#"> <i class="fas fa-user"></i> by admin </a>
+                    </div>
+                    <h3>blog title goes here.</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, deserunt.</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <img src="images/img-2.jpg" alt="">
+                    <div class="icons">
+                        <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2021 </a>
+                        <a href="#"> <i class="fas fa-user"></i> by admin </a>
+                    </div>
+                    <h3>blog title goes here.</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, deserunt.</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <img src="images/img-3.jpg" alt="">
+                    <div class="icons">
+                        <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2021 </a>
+                        <a href="#"> <i class="fas fa-user"></i> by admin </a>
+                    </div>
+                    <h3>blog title goes here.</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, deserunt.</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <img src="images/img-4.jpg" alt="">
+                    <div class="icons">
+                        <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2021 </a>
+                        <a href="#"> <i class="fas fa-user"></i> by admin </a>
+                    </div>
+                    <h3>blog title goes here.</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, deserunt.</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <img src="images/img-5.jpg" alt="">
+                    <div class="icons">
+                        <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2021 </a>
+                        <a href="#"> <i class="fas fa-user"></i> by admin </a>
+                    </div>
+                    <h3>blog title goes here.</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, deserunt.</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <img src="images/img-6.jpg" alt="">
+                    <div class="icons">
+                        <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2021 </a>
+                        <a href="#"> <i class="fas fa-user"></i> by admin </a>
+                    </div>
+                    <h3>blog title goes here.</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, deserunt.</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+
+            </div>
+
+        </div>
+
+        <!--blogs section ends here-->
+
+
+        <!--newsletter section here-->
+
+        <section class="newsletter">
+
+            <div class="content">
+                <h1 class="heading">subcribe now</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel aliquam dolor culpa natus nisi nam placeat ex necessitatibus sapiente error.</p>
+                <form action="">
+                    <input type="text" placeholder="enter your email" class="email">
+                    <input type="submit" value="subscibe" class="btn">
+                </form>
+            </div>
+        </section>
+
+        <section class="clients">
+
+            <div class="swiper clients-slider">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide slide"><img src="images/client-logo-1.png" alt=""></div>
+                    <div class="swiper-slide slide"><img src="images/client-logo-2.png" alt=""></div>
+                    <div class="swiper-slide slide"><img src="images/client-logo-3.png" alt=""></div>
+                    <div class="swiper-slide slide"><img src="images/client-logo-4.png" alt=""></div>
+                </div>
+            </div>
+        </section>
+
+        <!--footer section starts-->
+
+        <section class="footer">
+
+            <div class="box-container">
+
+                <div class="box">
+                    <h3>quick links</h3>
+                    <a href="#home">home</a>
+                    <a href="#about">about</a>
+                    <a href="#shop">shop</a>
+                    <a href="#packages">packages</a>
+                    <a href="#reviews">reviews</a>
+                    <a href="#blogs">blogs</a>
+                </div>
+
+                <div class="box">
+                    <h3>extra links</h3>
+                    <a href="#">my account</a>
+                    <a href="#">my order</a>
+                    <a href="#">my wishlist</a>
+                    <a href="#">ask questions</a>
+                    <a href="#">terms of use</a>
+                    <a href="#">privacy policy</a>
+                </div>
+
+                <div class="box">
+                    <h3>contact info</h3>
+                    <a href="#"><i class="fas fa-phone"></i> +44-74-0338-6883</a>
+                    <a href="#"><i class="fas fa-phone"></i> +44-202-257-67</a>
+                    <a href="#"><i class="fas fa-envelope"></i>travel@gmail.com</a>
+                    <a href="#"><i class="fas fa-map"></i>hackney, london - united kingdom</a>
+                </div>
+
+                <div class="box">
+                    <h3>follow us</h3>
+                    <a href="#"><i class="fab fa-facebook-f"></i> facebook</a>
+                    <a href="#"><i class="fab fa-twitter"></i> twitter</a>
+                    <a href="#"><i class="fab fa-instagram"></i> instagram</a>
+                    <a href="#"><i class="fab fa-linkedin"></i> linkedin</a>
+                    <a href="#"><i class="fab fa-github"></i> github</a>
+                </div>
+            </div>
+        </section>
 
 
 
@@ -330,10 +705,14 @@
 
 
 
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
-    <!-- custom js file link  -->
-    <script src="js/script.js"></script>
+
+
+
+        <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+        <!-- custom js file link  -->
+        <script src="js/script.js"></script>
 </body>
 
 </html>
